[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/MainScene.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorScene" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.996078, 0.94902, 0.894118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveScoreLabel" type="Label" parent="ColorScene"]
anchor_right = 1.0
anchor_bottom = 0.062
margin_bottom = 0.32
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Move:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainerField" type="HBoxContainer" parent="ColorScene"]
anchor_top = 0.156
anchor_right = 1.0
anchor_bottom = 0.844
margin_top = 0.159996
margin_bottom = -0.160156
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainerField" type="GridContainer" parent="ColorScene/HBoxContainerField"]
margin_left = 240.0
margin_right = 240.0
margin_bottom = 439.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackMenuLabel" type="Label" parent="ColorScene"]
anchor_top = 0.891
anchor_right = 1.0
anchor_bottom = 0.952
margin_top = -0.23999
margin_bottom = -0.280029
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackMenuButton" type="Button" parent="ColorScene/BackMenuLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainerMenu" type="VBoxContainer" parent="ColorScene"]
anchor_top = 0.156
anchor_right = 1.0
anchor_bottom = 0.844
margin_top = 0.159996
margin_bottom = -0.160034
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameNameLabel" type="Label" parent="ColorScene/VBoxContainerMenu"]
margin_top = 82.0
margin_right = 480.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.776471, 0, 0, 1 )
text = "Tag Game"
align = 1
valign = 1

[node name="LabelField44" type="Label" parent="ColorScene/VBoxContainerMenu"]
margin_top = 141.0
margin_right = 480.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.776471, 0, 0, 1 )
text = "4*4"
align = 1
valign = 1

[node name="Button44" type="Button" parent="ColorScene/VBoxContainerMenu/LabelField44"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LabelField55" type="Label" parent="ColorScene/VBoxContainerMenu"]
margin_top = 200.0
margin_right = 480.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.776471, 0, 0, 1 )
text = "5*5"
align = 1
valign = 1

[node name="Button55" type="Button" parent="ColorScene/VBoxContainerMenu/LabelField55"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LabelField66" type="Label" parent="ColorScene/VBoxContainerMenu"]
margin_top = 259.0
margin_right = 480.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.776471, 0, 0, 1 )
text = "6*6"
align = 1
valign = 1

[node name="Button66" type="Button" parent="ColorScene/VBoxContainerMenu/LabelField66"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SoundOnOffLabel" type="Label" parent="ColorScene/VBoxContainerMenu"]
margin_top = 318.0
margin_right = 480.0
margin_bottom = 357.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.776471, 0, 0, 1 )
text = "Sound On/Off"
align = 1
valign = 1

[node name="ButtonSoundOnOff" type="Button" parent="ColorScene/VBoxContainerMenu/SoundOnOffLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="button_down" from="ColorScene/BackMenuLabel/BackMenuButton" to="." method="_on_BackMenuButton_button_down"]
[connection signal="button_down" from="ColorScene/VBoxContainerMenu/LabelField44/Button44" to="." method="_on_Button44_button_down"]
[connection signal="button_down" from="ColorScene/VBoxContainerMenu/LabelField55/Button55" to="." method="_on_Button55_button_down"]
[connection signal="button_down" from="ColorScene/VBoxContainerMenu/LabelField66/Button66" to="." method="_on_Button66_button_down"]
[connection signal="button_down" from="ColorScene/VBoxContainerMenu/SoundOnOffLabel/ButtonSoundOnOff" to="." method="_on_ButtonSoundOnOff_button_down"]
